1998-10-04  Andreas Schwab  <schwab@issan.informatik.uni-dortmund.de>

	* elf/dl-open.c: Declare _dl_unload_cache.
	* elf/rtld.c: Likewise.
	* sysdeps/generic/dl-cache.c (_dl_unload_cache): Cast first
	argument of munmap.

1998-09-28  Ulrich Drepper  <drepper@cygnus.com>

	* libio/libio.h [!__STDC__]: Define const only if not defined.

1998-09-29  Thorsten Kukuk  <kukuk@vt.uni-paderborn.de>

	* nis/ypclnt.c (yp_all): Close UDP socket und give CLIENT handle free.

1998-09-28  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/unix/sysv/linux/socketbits.h (CMSG_ALIGN): Define.
	(__cmsg_nxthdr): Use CMSG_ALIGN (fixes a bug) and correct test for
	availability of another entry.
	Patch by ak@muc.de.

	* sysdeps/unix/sysv/linux/netinet/ip.h (IPOPT_NOOP): Fix typo.
	Patch by ak@muc.de.

1998-09-11  Ulrich Drepper  <drepper@cygnus.com>

	* resolv/res_init.c (res_init): Handle resolv.conf file with only
	one nameserver correctly.  Patch by HJ Lu.

1998-09-14  Thorsten Kukuk  <kukuk@vt.uni-paderborn.de>

	* nis/nss_nis/nis-pwd.c (_nss_nis_getpwent_r): Correct test for
	invalid password.

1998-09-10  Ulrich Drepper  <drepper@cygnus.com>

	* stdlib/random_r.c (__setstate_r): Allow call with same state
	array as currently used (PR libc/774).
	Patch by rob@retina.anatomy.upenn.edu.

1998-09-10 11:53  Ulrich Drepper  <drepper@cygnus.com>

	* time/tzfile.c (__tzfile_read): Handle case when there are no
	transitions.
	* time/tzset.c (tzset_internal): Set __timezone before returning.

1998-09-10  Ulrich Drepper  <drepper@cygnus.com>

	* resolv/res_init.c (res_init): Initialize _res.nscount and
	_res.nsaddr.sin_port differently for the can when no loopback is
	available to allow immediate timeout in non-networking environments.
	Patch by Cristian Gafton <gafton@redhat.com>.

1998-08-31  Ulrich Drepper  <drepper@cygnus.com>

	* elf/dl-close.c (_dl_close): Update _dl_loaded if the first
	object on the list is removed.
	Reported by HJ Lu [PR libc/770].
